--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,17 +1,17 @@
 name: Build APK
-on: [push, workflow_dispatch] # Сборка запускается при каждом сохранении кода
+on: [push, workflow_dispatch]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4 # Обновлено до v4
 
       - name: Setup Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5 # Обновлено до v5
         with:
-          python-version: 3.9
+          python-version: '3.10'
 
       - name: Install dependencies
         run: |
@@ -22,14 +22,17 @@ jobs:
 
       - name: Build APK with Buildozer
         run: |
-          # Этот шаг создаст конфиг и запустит сборку в режиме Android Debug
-          yes | buildozer init
-          # Подменяем в конфиге настройки на те, что работают в облаке
+          # Создаем конфиг, если его нет
+          if [ ! -f buildozer.spec ]; then
+            buildozer init
+          fi
+          # Принимаем лицензии и настраиваем билд
           sed -i 's/# android.accept_sdk_license = False/android.accept_sdk_license = True/' buildozer.spec
+          # Запускаем сборку
           buildozer -v android debug
 
       - name: Upload APK
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4 #ВОТ ТУТ БЫЛА ОШИБКА, ТЕПЕРЬ v4
         with:
           name: my-app-apk
           path: bin/*.apk
