--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,10 +6,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4 # Обновлено до v4
+        uses: actions/checkout@v4
 
       - name: Setup Python
-        uses: actions/setup-python@v5 # Обновлено до v5
+        uses: actions/setup-python@v5
         with:
           python-version: '3.10'
 
@@ -22,17 +22,24 @@ jobs:
 
       - name: Build APK with Buildozer
         run: |
-          # Создаем конфиг, если его нет
+          # 1. Инициализация если нет конфига
           if [ ! -f buildozer.spec ]; then
             buildozer init
           fi
-          # Принимаем лицензии и настраиваем билд
+          
+          # 2. ЖЕСТКАЯ КОРРЕКТИРОВКА КОНФИГА (Исправляет ошибку 100)
+          # Принимаем лицензии
           sed -i 's/# android.accept_sdk_license = False/android.accept_sdk_license = True/' buildozer.spec
-          # Запускаем сборку
+          # Указываем правильную архитектуру (многие ошибки 100 из-за попытки собрать под всё сразу)
+          sed -i 's/android.archs = arm64-v8a, armeabi-v7a/android.archs = arm64-v8a/' buildozer.spec
+          # Указываем минимальную версию API
+          sed -i 's/# android.minapi = 21/android.minapi = 21/' buildozer.spec
+          
+          # 3. Запуск сборки
           buildozer -v android debug
 
       - name: Upload APK
-        uses: actions/upload-artifact@v4 #ВОТ ТУТ БЫЛА ОШИБКА, ТЕПЕРЬ v4
+        uses: actions/upload-artifact@v4
         with:
           name: my-app-apk
           path: bin/*.apk
